--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,4 +155,45 @@
     <string name="share_ingredient">Share Ingredient</string>
     <string name="nutrition_per_measure">Nutrition per measure</string>
 
+    <!-- Game Screen -->
+    <string name="game_section_subtitle">Play fun games to help you decide what to eat!</string>
+    <string name="featured_games">Featured Games</string>
+    <string name="coming_soon">Coming soon</string>
+    <string name="play_now">Play Now</string>
+
+    <!-- Wheel Dish Picker -->
+    <string name="pick_dishes_for_wheel">Pick Dishes for Wheel</string>
+    <string name="selected_dishes">Selected Dishes</string>
+    <string name="no_dishes_selected">No dishes selected yet. Tap dishes below to add them.</string>
+    <string name="done">Done</string>
+    <string name="difficulty_easy">Easy</string>
+    <string name="difficulty_medium">Medium</string>
+    <string name="difficulty_hard">Khó</string>
+
+    <!-- Wheel of Fortune Screen -->
+    <string name="wheel_of_fortune_description">Spin the wheel and let fate decide your next delicious meal!</string>
+    <string name="dishes_on_wheel">Dishes on Wheel</string>
+    <string name="no_dishes_on_wheel">No dishes on the wheel yet.\nAdd dishes to get started!</string>
+    <string name="add_dishes">Add Dishes</string>
+    <string name="add_more">Add More</string>
+    <string name="spin_the_wheel">Spin the Wheel</string>
+    <string name="spinning">Spinning...</string>
+    <string name="winner_celebration">🎉 Winner! 🎉</string>
+    <string name="tap_to_view_details">Tap to view details</string>
+    <string name="home">Home</string>
+    <string name="search_placeholder">Search for something</string>
+
+    <!-- Contact Section -->
+    <string name="contact_us">Contact Us</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="message">Message</string>
+    <string name="send_message">Send Message</string>
+    <string name="or_contact_directly">Or contact directly:</string>
+    <string name="name_required">Name is required</string>
+    <string name="email_required">Valid email is required</string>
+    <string name="message_required">Message is required</string>
+    <string name="message_sent_success">Message sent successfully</string>
+    <string name="message_send_failed">Failed to send message</string>
+    <string name="success">Success</string>
 </resources>
